# BluetoothPracticaConti

./: CMakeLists.txt
D-BusInterfaces/: genBlueZItf.sh  org.bluez.Adapter1.xml  org.freedesktop.DBus.ObjectManager.xml
inc/public/: IBluetooth.h  IBtDiscover.h
src/BtStack/: CBluetoothStack.cpp  CBluetoothStack.h  CDiscoveryHandler.cpp  CDiscoveryHandler.h  CMakeLists.txt  CPariHandler.cpp  CPariHandler.h
src/HumanMachineInteraction/: CHmi.cpp  CHmi.h  CMakeLists.txt
src/main/: CMakeLists.txt  main.cpp
